Fixed alignment for that code area
In the CSS you set all the <td>'s to have text-align:center on line 214, but your code is also in a <td> then it is why it gets centered, with my change I set the <td> with the code (that has a class attribute of "line-data") to have text-align:left, fixing the alignment issue.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -466,7 +466,7 @@ footer a:hover {
   #main-content h4:before,
   #main-content h5:before,
   #main-content h6:before {
-    content: none;
+    content: none;c
     padding-right: 0;
     margin-left: 0;
   }
@@ -477,3 +477,7 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {}
+
+.line-data{	/*this should fix the center aligned text*/	
+    text-align: left;
+}
